Bug 1925328, part 2 - test(webgpu): accumulate observed intermittents in tier 3 r=webgpu-reviewers,teoxoy
Differential Revision: https://phabricator.services.mozilla.com/D225383

UltraBlame original commit: 482d4be937f8e08c7922675aafa002b38833bb69

--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/memory_sync/buffer/single_buffer/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/memory_sync/buffer/single_buffer/cts.https.html.ini
@@ -7942,9 +7942,6 @@ os
 "
 win
 "
-and
-not
-debug
 :
 [
 PASS
@@ -9319,8 +9316,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -9427,6 +9422,23 @@ writeContext
 "
 queue
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -9495,9 +9507,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -9737,9 +9746,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -9948,8 +9954,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -10000,40 +10004,6 @@ encoder
 "
 ]
 expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-[
-PASS
-FAIL
-]
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-PASS
-FAIL
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-debug
 :
 [
 PASS
