--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/render_pipeline/primitive_topology/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/render_pipeline/primitive_topology/cts.https.html.ini
@@ -236,9 +236,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -314,6 +311,22 @@ false
 primitiveRestart
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
