--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/rendering/draw/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/rendering/draw/cts.https.html.ini
@@ -957,8 +957,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -1015,8 +1013,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -1355,8 +1351,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -1435,8 +1429,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -1546,6 +1538,20 @@ base_vertex
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
@@ -2507,8 +2513,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -2576,6 +2580,18 @@ os
 "
 linux
 "
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
 and
 not
 debug
@@ -2631,9 +2647,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -3230,6 +3243,21 @@ debug
 PASS
 FAIL
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -3449,9 +3477,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -3518,9 +3543,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -3580,6 +3602,20 @@ debug
 PASS
 FAIL
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -4212,6 +4248,20 @@ debug
 PASS
 FAIL
 ]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -5174,6 +5224,23 @@ base_vertex
 "
 _undef_
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -11305,6 +11372,22 @@ base_vertex
 =
 0
 ]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -12088,8 +12171,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -12376,8 +12457,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -14740,6 +14819,23 @@ base_vertex
 =
 0
 ]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -16409,6 +16505,22 @@ base_vertex
 =
 9
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -17254,6 +17366,22 @@ base_vertex
 =
 0
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -18327,9 +18455,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -19916,8 +20041,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -20161,6 +20284,23 @@ base_vertex
 =
 0
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -20329,6 +20469,23 @@ index_buffer_offset
 base_vertex
 =
 0
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -21368,8 +21525,6 @@ os
 "
 win
 "
-and
-debug
 :
 [
 PASS
@@ -21769,8 +21924,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -21993,129 +22146,6 @@ debug
 PASS
 FAIL
 ]
-[
-:
-first
-=
-3
-;
-count
-=
-3
-;
-first_instance
-=
-0
-;
-instance_count
-=
-0
-;
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-vertex_buffer_offset
-=
-0
-;
-index_buffer_offset
-=
-0
-;
-base_vertex
-=
-9
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-PASS
-FAIL
-]
-[
-:
-first
-=
-3
-;
-count
-=
-3
-;
-first_instance
-=
-0
-;
-instance_count
-=
-0
-;
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-vertex_buffer_offset
-=
-0
-;
-index_buffer_offset
-=
-16
-;
-base_vertex
-=
-0
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-os
-=
-=
-"
-linux
-"
-and
-not
-debug
-:
-[
-PASS
-FAIL
-]
 if
 os
 =
@@ -22123,6 +22153,8 @@ os
 "
 mac
 "
+and
+debug
 :
 [
 PASS
@@ -22157,141 +22189,6 @@ false
 vertex_buffer_offset
 =
 0
-;
-index_buffer_offset
-=
-16
-;
-base_vertex
-=
-9
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-PASS
-FAIL
-]
-[
-:
-first
-=
-3
-;
-count
-=
-3
-;
-first_instance
-=
-0
-;
-instance_count
-=
-0
-;
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-vertex_buffer_offset
-=
-32
-;
-index_buffer_offset
-=
-0
-;
-base_vertex
-=
-0
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-os
-=
-=
-"
-linux
-"
-and
-not
-debug
-:
-[
-PASS
-FAIL
-]
-[
-:
-first
-=
-3
-;
-count
-=
-3
-;
-first_instance
-=
-0
-;
-instance_count
-=
-0
-;
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-vertex_buffer_offset
-=
-32
 ;
 index_buffer_offset
 =
@@ -22345,7 +22242,7 @@ false
 ;
 vertex_buffer_offset
 =
-32
+0
 ;
 index_buffer_offset
 =
@@ -22426,6 +22323,291 @@ false
 ;
 vertex_buffer_offset
 =
+0
+;
+index_buffer_offset
+=
+16
+;
+base_vertex
+=
+9
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+PASS
+FAIL
+]
+[
+:
+first
+=
+3
+;
+count
+=
+3
+;
+first_instance
+=
+0
+;
+instance_count
+=
+0
+;
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+vertex_buffer_offset
+=
+32
+;
+index_buffer_offset
+=
+0
+;
+base_vertex
+=
+0
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
+[
+:
+first
+=
+3
+;
+count
+=
+3
+;
+first_instance
+=
+0
+;
+instance_count
+=
+0
+;
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+vertex_buffer_offset
+=
+32
+;
+index_buffer_offset
+=
+0
+;
+base_vertex
+=
+9
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
+[
+:
+first
+=
+3
+;
+count
+=
+3
+;
+first_instance
+=
+0
+;
+instance_count
+=
+0
+;
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+vertex_buffer_offset
+=
+32
+;
+index_buffer_offset
+=
+16
+;
+base_vertex
+=
+0
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+PASS
+FAIL
+]
+[
+:
+first
+=
+3
+;
+count
+=
+3
+;
+first_instance
+=
+0
+;
+instance_count
+=
+0
+;
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+vertex_buffer_offset
+=
 32
 ;
 index_buffer_offset
@@ -22435,6 +22617,22 @@ index_buffer_offset
 base_vertex
 =
 9
+]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -23154,6 +23352,23 @@ base_vertex
 =
 0
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -27254,6 +27469,23 @@ base_vertex
 _undef_
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -27381,6 +27613,23 @@ index_buffer_offset
 base_vertex
 =
 0
+]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -27499,9 +27748,6 @@ os
 "
 mac
 "
-and
-not
-debug
 :
 [
 PASS
@@ -27783,8 +28029,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -31503,6 +31747,22 @@ base_vertex
 _undef_
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -31690,6 +31950,23 @@ base_vertex
 =
 0
 ]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 first
@@ -32001,6 +32278,22 @@ index_buffer_offset
 base_vertex
 =
 9
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
