--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxColorAttachmentBytesPerSample/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxColorAttachmentBytesPerSample/cts.https.html.ini
@@ -7537,20 +7537,6 @@ os
 "
 linux
 "
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-and
-not
-debug
 :
 [
 FAIL
@@ -7679,20 +7665,6 @@ os
 "
 linux
 "
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-and
-not
-debug
 :
 [
 FAIL
@@ -7821,20 +7793,6 @@ os
 "
 linux
 "
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-and
-not
-debug
 :
 [
 FAIL
@@ -9521,6 +9479,22 @@ os
 =
 =
 "
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -9571,6 +9545,22 @@ rg16float
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -9631,6 +9621,22 @@ os
 =
 =
 "
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -9686,6 +9692,22 @@ os
 =
 =
 "
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -9736,6 +9758,22 @@ rgba8unorm
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -9796,6 +9834,22 @@ os
 =
 =
 "
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -9846,6 +9900,22 @@ rg16float
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -9906,6 +9976,22 @@ os
 =
 =
 "
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -9956,6 +10042,22 @@ rgba16float
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -10016,6 +10118,22 @@ os
 =
 =
 "
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -10057,381 +10175,6 @@ overLimit
 sampleCount
 =
 1
-;
-interleaveFormat
-=
-"
-r8unorm
-"
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-[
-:
-limitTest
-=
-"
-betweenDefaultAndMaximum
-"
-;
-testValueName
-=
-"
-overLimit
-"
-;
-sampleCount
-=
-1
-;
-interleaveFormat
-=
-"
-rg16float
-"
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-[
-:
-limitTest
-=
-"
-betweenDefaultAndMaximum
-"
-;
-testValueName
-=
-"
-overLimit
-"
-;
-sampleCount
-=
-1
-;
-interleaveFormat
-=
-"
-rg8unorm
-"
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-[
-:
-limitTest
-=
-"
-betweenDefaultAndMaximum
-"
-;
-testValueName
-=
-"
-overLimit
-"
-;
-sampleCount
-=
-1
-;
-interleaveFormat
-=
-"
-rgba16float
-"
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-[
-:
-limitTest
-=
-"
-betweenDefaultAndMaximum
-"
-;
-testValueName
-=
-"
-overLimit
-"
-;
-sampleCount
-=
-1
-;
-interleaveFormat
-=
-"
-rgba8unorm
-"
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-[
-:
-limitTest
-=
-"
-betweenDefaultAndMaximum
-"
-;
-testValueName
-=
-"
-overLimit
-"
-;
-sampleCount
-=
-4
 ;
 interleaveFormat
 =
@@ -10524,6 +10267,471 @@ overLimit
 ;
 sampleCount
 =
+1
+;
+interleaveFormat
+=
+"
+rg16float
+"
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+[
+:
+limitTest
+=
+"
+betweenDefaultAndMaximum
+"
+;
+testValueName
+=
+"
+overLimit
+"
+;
+sampleCount
+=
+1
+;
+interleaveFormat
+=
+"
+rg8unorm
+"
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+[
+:
+limitTest
+=
+"
+betweenDefaultAndMaximum
+"
+;
+testValueName
+=
+"
+overLimit
+"
+;
+sampleCount
+=
+1
+;
+interleaveFormat
+=
+"
+rgba16float
+"
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+[
+:
+limitTest
+=
+"
+betweenDefaultAndMaximum
+"
+;
+testValueName
+=
+"
+overLimit
+"
+;
+sampleCount
+=
+1
+;
+interleaveFormat
+=
+"
+rgba8unorm
+"
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+[
+:
+limitTest
+=
+"
+betweenDefaultAndMaximum
+"
+;
+testValueName
+=
+"
+overLimit
+"
+;
+sampleCount
+=
+4
+;
+interleaveFormat
+=
+"
+r8unorm
+"
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+[
+:
+limitTest
+=
+"
+betweenDefaultAndMaximum
+"
+;
+testValueName
+=
+"
+overLimit
+"
+;
+sampleCount
+=
 4
 ;
 interleaveFormat
@@ -12333,9 +12541,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12375,9 +12580,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12417,9 +12619,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12459,9 +12658,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12501,9 +12697,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12598,9 +12791,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12640,9 +12830,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12698,9 +12885,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -12740,9 +12924,6 @@ os
 "
 linux
 "
-and
-not
-debug
 :
 [
 PASS
@@ -13173,8 +13354,26 @@ os
 "
 win
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -13248,8 +13447,26 @@ os
 "
 win
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -13323,8 +13540,26 @@ os
 "
 win
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -13473,8 +13708,26 @@ os
 "
 win
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -13552,6 +13805,20 @@ status
 backlog
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+OK
+CRASH
+]
 if
 os
 =
