--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxComputeWorkgroupsPerDimension/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxComputeWorkgroupsPerDimension/cts.https.html.ini
@@ -32,6 +32,20 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+OK
+TIMEOUT
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -391,6 +405,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -446,6 +475,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -496,6 +540,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -556,6 +615,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -611,6 +685,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -661,6 +750,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -723,41 +827,7 @@ os
 "
 win
 "
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
 and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-and
-not
 debug
 :
 [
@@ -765,32 +835,6 @@ FAIL
 TIMEOUT
 NOTRUN
 ]
-[
-:
-limitTest
-=
-"
-atMaximum
-"
-;
-testValueName
-=
-"
-overLimit
-"
-;
-pipelineType
-=
-"
-createComputePipeline
-"
-;
-axis
-=
-1
-]
-expected
-:
 if
 os
 =
@@ -798,6 +842,9 @@ os
 "
 win
 "
+and
+not
+debug
 :
 FAIL
 if
@@ -862,6 +909,99 @@ createComputePipeline
 ;
 axis
 =
+1
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+[
+:
+limitTest
+=
+"
+atMaximum
+"
+;
+testValueName
+=
+"
+overLimit
+"
+;
+pipelineType
+=
+"
+createComputePipeline
+"
+;
+axis
+=
 2
 ]
 expected
@@ -873,6 +1013,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -948,6 +1106,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1023,6 +1199,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1098,6 +1292,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1179,6 +1391,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -1212,6 +1440,22 @@ os
 "
 linux
 "
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
 :
 [
 PASS
@@ -1257,6 +1501,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -1288,8 +1548,39 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
 :
 [
 PASS
@@ -1322,6 +1613,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -1377,6 +1683,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -1439,6 +1760,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1514,6 +1853,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1589,6 +1946,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1664,6 +2039,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1739,6 +2132,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1814,6 +2225,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -1887,6 +2316,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -1942,6 +2386,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -1992,6 +2451,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -2052,6 +2526,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -2107,6 +2596,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -2157,6 +2661,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -2217,6 +2736,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -2272,6 +2806,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -2322,6 +2871,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -2382,6 +2946,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -2437,6 +3016,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -2487,6 +3081,21 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
