--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxStorageBuffersPerShaderStage/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxStorageBuffersPerShaderStage/cts.https.html.ini
@@ -33792,6 +33792,24 @@ order
 backward
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -33859,6 +33877,24 @@ order
 "
 shiftByHalf
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -34093,6 +34129,24 @@ order
 "
 forward
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
