--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxTextureDimension1D/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxTextureDimension1D/cts.https.html.ini
@@ -33,6 +33,23 @@ linux
 "
 :
 backlog
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
 [
 :
 limitTest
@@ -98,8 +115,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -142,6 +177,24 @@ testValueName
 atLimit
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -155,6 +208,24 @@ testValueName
 "
 overLimit
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
