--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/encoding/cmds/setBindGroup/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/encoding/cmds/setBindGroup/cts.https.html.ini
@@ -1826,6 +1826,22 @@ resourceType
 texture
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -1847,6 +1863,22 @@ resourceType
 "
 buffer
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -1870,6 +1902,22 @@ resourceType
 texture
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -1892,6 +1940,22 @@ resourceType
 buffer
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -1913,6 +1977,22 @@ resourceType
 "
 texture
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -1961,6 +2041,22 @@ resourceType
 texture
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -1982,6 +2078,22 @@ resourceType
 "
 buffer
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -2005,6 +2117,22 @@ resourceType
 texture
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -2027,6 +2155,22 @@ resourceType
 buffer
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -2048,6 +2192,22 @@ resourceType
 "
 texture
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -2096,6 +2256,22 @@ resourceType
 texture
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -2117,6 +2293,22 @@ resourceType
 "
 buffer
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -2140,6 +2332,22 @@ resourceType
 texture
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -2162,6 +2370,22 @@ resourceType
 buffer
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 encoderType
@@ -2183,6 +2407,22 @@ resourceType
 "
 texture
 "
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 cts
