--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/image_copy/layout_related/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/image_copy/layout_related/cts.https.html.ini
@@ -77678,6 +77678,50 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -77701,6 +77745,50 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -77758,8 +77846,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -77791,6 +77897,50 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -77814,6 +77964,50 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -77836,6 +78030,50 @@ dimension
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -77860,6 +78098,50 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -77883,6 +78165,50 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -77905,6 +78231,50 @@ dimension
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -77952,6 +78322,50 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -77974,6 +78388,50 @@ dimension
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -79742,8 +80200,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -79809,8 +80285,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -79876,8 +80370,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -79945,8 +80457,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
