--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/state/device_lost/destroy/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/state/device_lost/destroy/cts.https.html.ini
@@ -21665,9 +21665,6 @@ os
 "
 mac
 "
-and
-not
-debug
 :
 [
 PASS
@@ -22036,6 +22033,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 and
@@ -22274,8 +22286,6 @@ os
 "
 win
 "
-and
-debug
 :
 [
 PASS
@@ -22359,8 +22369,6 @@ os
 "
 win
 "
-and
-debug
 :
 [
 PASS
@@ -22743,6 +22751,21 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -34949,8 +34972,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35002,8 +35023,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35055,8 +35074,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35108,8 +35125,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35161,8 +35176,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35214,8 +35227,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35322,8 +35333,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35375,8 +35384,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35428,8 +35435,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35695,8 +35700,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -35750,8 +35753,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -36282,6 +36283,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36315,6 +36331,21 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -36358,6 +36389,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36396,6 +36442,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36429,6 +36490,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -36582,6 +36658,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36620,6 +36711,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36653,6 +36759,21 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -36696,6 +36817,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36734,6 +36870,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36767,6 +36918,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -36812,6 +36978,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36847,6 +37028,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -36890,6 +37086,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -36928,6 +37139,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -37042,6 +37268,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -37075,6 +37316,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -37120,6 +37376,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -37155,6 +37426,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -37672,26 +37958,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -37728,26 +37997,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -37784,26 +38036,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -37840,26 +38075,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -37896,26 +38114,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38068,26 +38269,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38124,26 +38308,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38180,26 +38347,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38236,26 +38386,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38292,26 +38425,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38348,26 +38464,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38406,26 +38505,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -38464,26 +38546,9 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-[
 TIMEOUT
 NOTRUN
 ]
@@ -55767,6 +55832,23 @@ awaitLost
 =
 false
 ]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 format
@@ -55792,6 +55874,23 @@ dst
 awaitLost
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -55977,9 +56076,6 @@ os
 "
 mac
 "
-and
-not
-debug
 :
 [
 PASS
@@ -58374,6 +58470,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 and
@@ -58612,8 +58723,6 @@ os
 "
 win
 "
-and
-debug
 :
 [
 PASS
@@ -58773,6 +58882,21 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -59120,6 +59244,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 and
@@ -59185,6 +59324,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
