--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/zero_init/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/zero_init/cts.https.html.ini
@@ -3290,6 +3290,50 @@ batch__
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -3313,6 +3357,50 @@ batch__
 19
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
