--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageData/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageData/cts.https.html.ini
@@ -172,6 +172,50 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -193,6 +237,50 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -440,6 +528,50 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -459,6 +591,50 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -477,6 +653,50 @@ dstPremultiplied
 false
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -496,6 +716,50 @@ dstPremultiplied
 true
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
