--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/memory_sync/buffer/multiple_buffers/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/memory_sync/buffer/multiple_buffers/cts.https.html.ini
@@ -5344,8 +5344,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -7800,8 +7798,6 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
@@ -9505,6 +9501,21 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -9817,6 +9828,20 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
 linux
 "
 and
@@ -9955,6 +9980,18 @@ win
 "
 and
 debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
 :
 [
 PASS
