--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxVertexBufferArrayStride/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxVertexBufferArrayStride/cts.https.html.ini
@@ -135,6 +135,24 @@ async
 =
 false
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -152,6 +170,24 @@ atLimit
 async
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -272,6 +308,24 @@ async
 =
 false
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -289,6 +343,24 @@ atLimit
 async
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -606,6 +678,24 @@ overLimit
 async
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 cts
