--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/binary/f32_matrix_matrix_multiplication/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/binary/f32_matrix_matrix_multiplication/cts.https.html.ini
@@ -40,6 +40,20 @@ debug
 OK
 TIMEOUT
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+OK
+TIMEOUT
+]
 [
 :
 inputSource
@@ -568,6 +582,50 @@ y_cols
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -591,6 +649,50 @@ y_cols
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -614,6 +716,50 @@ y_cols
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -637,6 +783,50 @@ y_cols
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -660,6 +850,50 @@ y_cols
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -681,25 +915,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-storage_r
+linux
 "
-;
-common_dim
-=
-2
-;
-x_rows
-=
-2
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -719,7 +950,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+storage_r
+"
+;
+common_dim
+=
+2
+;
+x_rows
+=
+2
+;
+y_cols
+=
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -741,25 +1026,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-storage_r
+linux
 "
-;
-common_dim
-=
-2
-;
-x_rows
-=
-3
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -779,7 +1061,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+storage_r
+"
+;
+common_dim
+=
+2
+;
+x_rows
+=
+3
+;
+y_cols
+=
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -801,25 +1137,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-storage_r
+linux
 "
-;
-common_dim
-=
-2
-;
-x_rows
-=
-4
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -839,7 +1172,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+storage_r
+"
+;
+common_dim
+=
+2
+;
+x_rows
+=
 4
+;
+y_cols
+=
+4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -861,25 +1248,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-storage_r
+linux
 "
-;
-common_dim
-=
-3
-;
-x_rows
-=
-2
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -899,7 +1283,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+storage_r
+"
+;
+common_dim
+=
+3
+;
+x_rows
+=
+2
+;
+y_cols
+=
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -921,6 +1359,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -941,6 +1396,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -960,6 +1432,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -981,6 +1470,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1001,6 +1507,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1020,6 +1543,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1041,25 +1581,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-storage_r
+linux
 "
-;
-common_dim
-=
-4
-;
-x_rows
-=
-2
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1079,7 +1616,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+storage_r
+"
+;
+common_dim
+=
 4
+;
+x_rows
+=
+2
+;
+y_cols
+=
+4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1101,6 +1692,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1121,6 +1729,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1140,6 +1765,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1161,6 +1803,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1181,6 +1840,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1200,6 +1876,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1221,6 +1914,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1240,6 +1950,23 @@ x_rows
 y_cols
 =
 3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1261,6 +1988,23 @@ y_cols
 =
 4
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1281,6 +2025,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1300,6 +2061,23 @@ x_rows
 y_cols
 =
 3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1321,6 +2099,23 @@ y_cols
 =
 4
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1340,6 +2135,23 @@ x_rows
 y_cols
 =
 2
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1361,6 +2173,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1381,25 +2210,22 @@ y_cols
 =
 4
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-storage_rw
+linux
 "
-;
-common_dim
-=
-3
-;
-x_rows
-=
-2
-;
-y_cols
-=
-2
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1419,7 +2245,61 @@ x_rows
 ;
 y_cols
 =
+2
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+storage_rw
+"
+;
+common_dim
+=
 3
+;
+x_rows
+=
+2
+;
+y_cols
+=
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1441,6 +2321,23 @@ y_cols
 =
 4
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1461,6 +2358,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1481,6 +2395,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1500,6 +2431,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1521,6 +2469,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1540,6 +2505,23 @@ x_rows
 y_cols
 =
 3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1561,6 +2543,23 @@ y_cols
 =
 4
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1580,6 +2579,23 @@ x_rows
 y_cols
 =
 2
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1601,6 +2617,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1621,6 +2654,23 @@ y_cols
 =
 4
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1640,6 +2690,23 @@ x_rows
 y_cols
 =
 2
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1669,6 +2736,21 @@ os
 =
 "
 win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
 "
 and
 debug
@@ -1715,6 +2797,21 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1743,6 +2840,21 @@ os
 =
 "
 win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
 "
 and
 debug
@@ -1789,6 +2901,21 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1826,6 +2953,21 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1845,6 +2987,23 @@ x_rows
 y_cols
 =
 2
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1866,6 +3025,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -1886,45 +3062,22 @@ y_cols
 =
 4
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-uniform
+linux
 "
-;
-common_dim
-=
-2
-;
-x_rows
-=
-3
-;
-y_cols
-=
-2
-]
-[
+and
+debug
 :
-inputSource
-=
-"
-uniform
-"
-;
-common_dim
-=
-2
-;
-x_rows
-=
-3
-;
-y_cols
-=
-3
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1944,7 +3097,98 @@ x_rows
 ;
 y_cols
 =
+2
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+uniform
+"
+;
+common_dim
+=
+2
+;
+x_rows
+=
+3
+;
+y_cols
+=
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+uniform
+"
+;
+common_dim
+=
+2
+;
+x_rows
+=
+3
+;
+y_cols
+=
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -1966,25 +3210,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-uniform
+linux
 "
-;
-common_dim
-=
-2
-;
-x_rows
-=
-4
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2004,7 +3245,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+uniform
+"
+;
+common_dim
+=
+2
+;
+x_rows
+=
 4
+;
+y_cols
+=
+4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2026,25 +3321,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-uniform
+linux
 "
-;
-common_dim
-=
-3
-;
-x_rows
-=
-2
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2064,7 +3356,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+uniform
+"
+;
+common_dim
+=
+3
+;
+x_rows
+=
+2
+;
+y_cols
+=
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2086,6 +3432,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2106,6 +3469,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2125,6 +3505,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2146,6 +3543,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2166,6 +3580,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2185,6 +3616,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2206,25 +3654,22 @@ y_cols
 =
 2
 ]
-[
+expected
 :
-inputSource
+if
+os
+=
 =
 "
-uniform
+linux
 "
-;
-common_dim
-=
-4
-;
-x_rows
-=
-2
-;
-y_cols
-=
-3
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2244,7 +3689,61 @@ x_rows
 ;
 y_cols
 =
+3
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+[
+:
+inputSource
+=
+"
+uniform
+"
+;
+common_dim
+=
 4
+;
+x_rows
+=
+2
+;
+y_cols
+=
+4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2266,6 +3765,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2286,6 +3802,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2305,6 +3838,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -2326,6 +3876,23 @@ y_cols
 =
 2
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2346,6 +3913,23 @@ y_cols
 =
 3
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 inputSource
@@ -2365,6 +3949,23 @@ x_rows
 y_cols
 =
 4
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 cts
@@ -2810,6 +4411,23 @@ common_dim
 x_rows
 =
 3
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
