--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/robust_access_vertex/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/robust_access_vertex/cts.https.html.ini
@@ -3904,6 +3904,20 @@ linux
 PASS
 FAIL
 ]
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 indexed
@@ -3947,8 +3961,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -4056,7 +4068,40 @@ true
 expected
 :
 if
+os
+=
+=
+"
+win
+"
+and
 debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 [
 PASS
@@ -4177,54 +4222,6 @@ os
 =
 =
 "
-mac
-"
-:
-[
-PASS
-FAIL
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x2
-"
-;
-additionalBuffers
-=
-0
-;
-partialLastNumber
-=
-true
-;
-offsetVertexBuffer
-=
-false
-]
-expected
-:
-if
-os
-=
-=
-"
 linux
 "
 and
@@ -4278,6 +4275,66 @@ true
 ;
 offsetVertexBuffer
 =
+false
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+PASS
+FAIL
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x2
+"
+;
+additionalBuffers
+=
+0
+;
+partialLastNumber
+=
+true
+;
+offsetVertexBuffer
+=
 true
 ]
 expected
@@ -4289,25 +4346,383 @@ os
 "
 linux
 "
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+PASS
+FAIL
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x2
+"
+;
+additionalBuffers
+=
+4
+;
+partialLastNumber
+=
+false
+;
+offsetVertexBuffer
+=
+false
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+PASS
+FAIL
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x2
+"
+;
+additionalBuffers
+=
+4
+;
+partialLastNumber
+=
+false
+;
+offsetVertexBuffer
+=
+true
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x2
+"
+;
+additionalBuffers
+=
+4
+;
+partialLastNumber
+=
+true
+;
+offsetVertexBuffer
+=
+false
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x2
+"
+;
+additionalBuffers
+=
+4
+;
+partialLastNumber
+=
+true
+;
+offsetVertexBuffer
+=
+true
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x3
+"
+;
+additionalBuffers
+=
+0
+;
+partialLastNumber
+=
+false
+;
+offsetVertexBuffer
+=
+false
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x3
+"
+;
+additionalBuffers
+=
+0
+;
+partialLastNumber
+=
+false
+;
+offsetVertexBuffer
+=
+true
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x3
+"
+;
+additionalBuffers
+=
+0
+;
+partialLastNumber
+=
+true
+;
+offsetVertexBuffer
+=
+false
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x3
+"
+;
+additionalBuffers
+=
+0
+;
+partialLastNumber
+=
+true
+;
+offsetVertexBuffer
+=
+true
+]
+[
+:
+indexed
+=
+true
+;
+indirect
+=
+false
+;
+drawCallTestParameter
+=
+"
+baseVertex
+"
+;
+type
+=
+"
+float32x3
+"
+;
+additionalBuffers
+=
+4
+;
+partialLastNumber
+=
+false
+;
+offsetVertexBuffer
+=
+false
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
 and
+not
 debug
 :
 [
 PASS
 FAIL
 ]
-if
-os
-=
-=
-"
-mac
-"
-:
-[
-PASS
-FAIL
-]
 [
 :
 indexed
@@ -4327,67 +4742,7 @@ baseVertex
 type
 =
 "
-float32x2
-"
-;
-additionalBuffers
-=
-4
-;
-partialLastNumber
-=
-false
-;
-offsetVertexBuffer
-=
-false
-]
-expected
-:
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-PASS
-FAIL
-]
-if
-os
-=
-=
-"
-mac
-"
-:
-[
-PASS
-FAIL
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x2
+float32x3
 "
 ;
 additionalBuffers
@@ -4409,281 +4764,15 @@ os
 =
 =
 "
-linux
+win
 "
+and
+not
+debug
 :
+[
+PASS
 FAIL
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x2
-"
-;
-additionalBuffers
-=
-4
-;
-partialLastNumber
-=
-true
-;
-offsetVertexBuffer
-=
-false
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x2
-"
-;
-additionalBuffers
-=
-4
-;
-partialLastNumber
-=
-true
-;
-offsetVertexBuffer
-=
-true
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x3
-"
-;
-additionalBuffers
-=
-0
-;
-partialLastNumber
-=
-false
-;
-offsetVertexBuffer
-=
-false
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x3
-"
-;
-additionalBuffers
-=
-0
-;
-partialLastNumber
-=
-false
-;
-offsetVertexBuffer
-=
-true
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x3
-"
-;
-additionalBuffers
-=
-0
-;
-partialLastNumber
-=
-true
-;
-offsetVertexBuffer
-=
-false
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x3
-"
-;
-additionalBuffers
-=
-0
-;
-partialLastNumber
-=
-true
-;
-offsetVertexBuffer
-=
-true
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x3
-"
-;
-additionalBuffers
-=
-4
-;
-partialLastNumber
-=
-false
-;
-offsetVertexBuffer
-=
-false
-]
-[
-:
-indexed
-=
-true
-;
-indirect
-=
-false
-;
-drawCallTestParameter
-=
-"
-baseVertex
-"
-;
-type
-=
-"
-float32x3
-"
-;
-additionalBuffers
-=
-4
-;
-partialLastNumber
-=
-false
-;
-offsetVertexBuffer
-=
-true
 ]
 [
 :
@@ -4719,6 +4808,23 @@ offsetVertexBuffer
 =
 false
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 indexed
@@ -4752,6 +4858,23 @@ true
 offsetVertexBuffer
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
