--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageBitmap/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageBitmap/cts.https.html.ini
@@ -35801,6 +35801,23 @@ dstPremultiplied
 =
 false
 ]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 orientation
@@ -35876,6 +35893,21 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 orientation
@@ -35905,6 +35937,23 @@ srgb
 dstPremultiplied
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
 ]
 [
 :
@@ -36399,6 +36448,24 @@ os
 "
 linux
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -36441,28 +36508,6 @@ false
 expected
 :
 if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-PASS
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-linux
-"
-and
 debug
 :
 [
