Bug 1925328, part 3 - test(webgpu): tag consistently executing (but long) tests with `webgpu-long` r=webgpu-reviewers,teoxoy
Differential Revision: https://phabricator.services.mozilla.com/D226013

UltraBlame original commit: 8fe3534897b03ca569f0f29511e16d070d5048bf

--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/faceForward/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/faceForward/cts.https.html.ini
@@ -20,6 +20,14 @@ abstract_float_vec2
 :
 *
 ]
+tags
+:
+[
+webgpu
+webgpu
+-
+long
+]
 implementation
 -
 status
@@ -58,6 +66,14 @@ abstract_float_vec3
 :
 *
 ]
+tags
+:
+[
+webgpu
+webgpu
+-
+long
+]
 implementation
 -
 status
@@ -95,6 +111,14 @@ faceForward
 abstract_float_vec4
 :
 *
+]
+tags
+:
+[
+webgpu
+webgpu
+-
+long
 ]
 implementation
 -
@@ -296,6 +320,14 @@ f32_vec2
 :
 *
 ]
+tags
+:
+[
+webgpu
+webgpu
+-
+long
+]
 implementation
 -
 status
@@ -358,6 +390,14 @@ f32_vec3
 :
 *
 ]
+tags
+:
+[
+webgpu
+webgpu
+-
+long
+]
 implementation
 -
 status
@@ -419,6 +459,14 @@ faceForward
 f32_vec4
 :
 *
+]
+tags
+:
+[
+webgpu
+webgpu
+-
+long
 ]
 implementation
 -
